flowc/tests/fixtures/parse_e114_chained_compare.flow
flow chain(a: int, b: int, c: int) -> bool {
  ok = a < b < c
  ok
}
